# iterm2-rs

./: .gitignore  Cargo.toml
.cargo/: config.toml
.claude/: settings.json
.claude/agents/: renderer-dev.md  rust-systems-dev.md  test-writer.md
.claude/skills/project-patterns/: SKILL.md
.claude/skills/rust-terminal-patterns/: SKILL.md
crates/iterm2-rs/: Cargo.toml
crates/iterm2-rs/examples/: tmux_spike.rs
crates/iterm2-rs/src/: clipboard.rs  config.rs  main.rs  profiles.rs
crates/renderer/: Cargo.toml
crates/renderer/src/: config.rs  gpu.rs  lib.rs  menu.rs  terminal_renderer.rs  text.rs  window.rs
crates/terminal/: Cargo.toml
crates/terminal/src/: alacritty.rs  backend.rs  input.rs  lib.rs  pane.rs  pty.rs  search.rs  shell_integration.rs  tab.rs
crates/tmux/: Cargo.toml
crates/tmux/src/: events.rs  lib.rs  parser.rs  session.rs
