[package]
name = "iterm2-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
terminal = { path = "../terminal" }
renderer = { path = "../renderer" }
tmux = { path = "../tmux" }

winit.workspace = true
wgpu.workspace = true
portable-pty.workspace = true
serde.workspace = true
toml.workspace = true
arboard.workspace = true
log.workspace = true
env_logger.workspace = true
pollster.workspace = true
anyhow.workspace = true
