[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu.workspace = true
winit.workspace = true
glyphon.workspace = true
cosmic-text.workspace = true
pollster.workspace = true
anyhow.workspace = true
log.workspace = true
thiserror.workspace = true
bytemuck.workspace = true
alacritty_terminal.workspace = true
muda.workspace = true
arboard.workspace = true
terminal = { path = "../terminal" }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_UI_WindowsAndMessaging"] }
